# PUF-Transformer-IP-Protection

./: .gitignore  README-Artifact.md  README.md  license.txt  main.py  pyproject.toml
artifact/: requirements.txt
artifact/configs/: analysis_config.yaml  deit_tiny.yaml
artifact/src/analysis/: __init__.py  acm_sensitivity.py  decrypt_one_layer_analysis.py  deit_inference_overhead_analysis.py  dual_encryption_analysis.py  permutation_sensitivity.py  visualization.py
artifact/src/attacks/: ImageNetEval.py  cifar100_retrain.py
artifact/src/encryption/: dual_encryption.py  permutation.py
artifact/src/experiments/: __init__.py  comprehensive_analysis.py  decryption_demo.py  deit_cifar100_finetune.py  deit_encryption_experiment.py  (+1 more)
claims/claim1/: claim.txt  run.sh
claims/claim2/: claim.txt  run.sh
claims/claim3/: claim.txt  run.sh
claims/claim4/: claim.txt  run.sh
claims/claim5/: claim.txt  run.sh
configs/: analysis_config.yaml  vit_base.yaml  vit_large.yaml
infrastructure/: requirements.md  setup.txt
src/analysis/: acm_performance_cpu_gpu.py  acm_sensitivity.py  decrypt_one_layer_analysis.py  dual_encryption_analysis.py  inference_overhead_analysis.py  permutation_sensitivity.py  visualization.py
src/attacks/: train.py
src/encryption/: __init__.py  arnold_transform.py  dual_encryption.py
src/experiments/: acm_sensitivity_experiment.py  comprehensive_analysis.py  decrypt_one_layer_experiment.py  permutation_sensitivity_experiment.py  vit_encryption_experiment.py
src/utils/: config_utils.py  imagenet_eval.py  metrics.py  model_utils.py
(+11 files in other folders)
